{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 855,
  "lineage": "52212922-cd2f-e7f4-f099-45aa896fbf47",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "backend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:619005575057:targetgroup/backend-tg/fce66fc7c300b63a",
            "arn_suffix": "targetgroup/backend-tg/fce66fc7c300b63a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:619005575057:targetgroup/backend-tg/fce66fc7c300b63a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "backend-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-088f38f752fcd0985"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "frontend_alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:619005575057:targetgroup/frontend-target-group/7eb09477a5fbe8fb",
            "arn_suffix": "targetgroup/frontend-target-group/7eb09477a5fbe8fb",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:619005575057:targetgroup/frontend-target-group/7eb09477a5fbe8fb",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "frontend-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-088f38f752fcd0985"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04e60215225ee38b6",
            "arn": "arn:aws:ec2:eu-west-2:619005575057:elastic-ip/eipalloc-04e60215225ee38b6",
            "domain": "vpc",
            "id": "eipalloc-04e60215225ee38b6",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-18-175-73-210.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.175.73.210",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-2",
            "tags": {
              "Name": "eip_for_nat_gw1"
            },
            "tags_all": {
              "Name": "eip_for_nat_gw1"
            }
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e58453e9c45a12fb",
            "arn": "arn:aws:ec2:eu-west-2:619005575057:elastic-ip/eipalloc-0e58453e9c45a12fb",
            "domain": "vpc",
            "id": "eipalloc-0e58453e9c45a12fb",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-3-9-22-173.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.9.22.173",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-2",
            "tags": {
              "Name": "eip_for_nat_gw2"
            },
            "tags_all": {
              "Name": "eip_for_nat_gw2"
            }
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:619005575057:internet-gateway/igw-0949352d699c571e2",
            "id": "igw-0949352d699c571e2",
            "owner_id": "619005575057",
            "region": "eu-west-2",
            "tags": {
              "Name": "main_igw"
            },
            "tags_all": {
              "Name": "main_igw"
            },
            "vpc_id": "vpc-088f38f752fcd0985"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:619005575057:loadbalancer/app/load-balancer-main/0d67c948a6782c32",
            "arn_suffix": "app/load-balancer-main/0d67c948a6782c32",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "load-balancer-main-898925851.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:619005575057:loadbalancer/app/load-balancer-main/0d67c948a6782c32",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "load-balancer-main",
            "preserve_host_header": false,
            "region": "eu-west-2",
            "security_groups": [
              "sg-0ffbf8ab80dd0d0dd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08f74c240dc7be60c"
              },
              {
                "subnet_id": "subnet-0e4ab308bf0485c96"
              }
            ],
            "subnets": [
              "subnet-08f74c240dc7be60c",
              "subnet-0e4ab308bf0485c96"
            ],
            "vpc_id": "vpc-088f38f752fcd0985",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.Public_Subnet_1",
            "aws_subnet.Public_Subnet_2",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:619005575057:listener/app/load-balancer-main/0d67c948a6782c32/3ee8d6912917da7e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:619005575057:targetgroup/frontend-target-group/7eb09477a5fbe8fb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:619005575057:listener/app/load-balancer-main/0d67c948a6782c32/3ee8d6912917da7e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:619005575057:loadbalancer/app/load-balancer-main/0d67c948a6782c32",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-west-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_target_group.frontend_alb_tg",
            "aws_lb.alb_main",
            "aws_security_group.alb_sg",
            "aws_subnet.Public_Subnet_1",
            "aws_subnet.Public_Subnet_2",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04e60215225ee38b6",
            "association_id": "eipassoc-02f2a2e49a10c6cc1",
            "connectivity_type": "public",
            "id": "nat-0d364a88f5da7200d",
            "network_interface_id": "eni-05b976bb4709ed02e",
            "private_ip": "172.31.2.141",
            "public_ip": "18.175.73.210",
            "region": "eu-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e4ab308bf0485c96",
            "tags": {
              "Name": "nat_gw1"
            },
            "tags_all": {
              "Name": "nat_gw1"
            }
          },
          "dependencies": [
            "aws_eip.eip_nat_1",
            "aws_internet_gateway.main_igw",
            "aws_subnet.Public_Subnet_1",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e58453e9c45a12fb",
            "association_id": "eipassoc-06c960a009882c2da",
            "connectivity_type": "public",
            "id": "nat-001b3405092d27917",
            "network_interface_id": "eni-0c679a7e1a6e3ba26",
            "private_ip": "172.31.12.105",
            "public_ip": "3.9.22.173",
            "region": "eu-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08f74c240dc7be60c",
            "tags": {
              "Name": "nat_gw2"
            },
            "tags_all": {
              "Name": "nat_gw2"
            }
          },
          "dependencies": [
            "aws_eip.eip_nat_2",
            "aws_internet_gateway.main_igw",
            "aws_subnet.Public_Subnet_2",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:619005575057:route-table/rtb-0c77b1d026d3676dc",
            "id": "rtb-0c77b1d026d3676dc",
            "owner_id": "619005575057",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0949352d699c571e2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Main_RT"
            },
            "tags_all": {
              "Name": "Main_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-088f38f752fcd0985"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:619005575057:route-table/rtb-07ca23dd84a9cdb83",
            "id": "rtb-07ca23dd84a9cdb83",
            "owner_id": "619005575057",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d364a88f5da7200d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nat_rt1"
            },
            "tags_all": {
              "Name": "nat_rt1"
            },
            "timeouts": null,
            "vpc_id": "vpc-088f38f752fcd0985"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_nat_1",
            "aws_internet_gateway.main_igw",
            "aws_nat_gateway.nat_gw1",
            "aws_subnet.Public_Subnet_1",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:619005575057:route-table/rtb-0b01c1cb4b109cbb3",
            "id": "rtb-0b01c1cb4b109cbb3",
            "owner_id": "619005575057",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-001b3405092d27917",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nat_rt2"
            },
            "tags_all": {
              "Name": "nat_rt2"
            },
            "timeouts": null,
            "vpc_id": "vpc-088f38f752fcd0985"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_nat_2",
            "aws_internet_gateway.main_igw",
            "aws_nat_gateway.nat_gw2",
            "aws_subnet.Public_Subnet_2",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private_Subnet_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9ec6eb6887f00e4",
            "region": "eu-west-2",
            "route_table_id": "rtb-07ca23dd84a9cdb83",
            "subnet_id": "subnet-0925789ab51212705"
          },
          "dependencies": [
            "aws_eip.eip_nat_1",
            "aws_internet_gateway.main_igw",
            "aws_nat_gateway.nat_gw1",
            "aws_route_table.private_rt_sub1",
            "aws_subnet.Private_Subnet_1",
            "aws_subnet.Public_Subnet_1",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private_Subnet_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00709d36d0fb4e578",
            "region": "eu-west-2",
            "route_table_id": "rtb-0b01c1cb4b109cbb3",
            "subnet_id": "subnet-097aadac374c007f6"
          },
          "dependencies": [
            "aws_eip.eip_nat_2",
            "aws_internet_gateway.main_igw",
            "aws_nat_gateway.nat_gw2",
            "aws_route_table.private_rt_sub2",
            "aws_subnet.Private_Subnet_2",
            "aws_subnet.Public_Subnet_2",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_Subnet_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ae4ce4dcdb9292d",
            "region": "eu-west-2",
            "route_table_id": "rtb-0c77b1d026d3676dc",
            "subnet_id": "subnet-0e4ab308bf0485c96"
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.main",
            "aws_subnet.Public_Subnet_1",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_Subnet_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f1aa441783df93a",
            "region": "eu-west-2",
            "route_table_id": "rtb-0c77b1d026d3676dc",
            "subnet_id": "subnet-08f74c240dc7be60c"
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.main",
            "aws_subnet.Public_Subnet_2",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:619005575057:security-group/sg-0ffbf8ab80dd0d0dd",
            "description": "Security group for ALB (internet-facing)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ffbf8ab80dd0d0dd",
            "ingress": [],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "619005575057",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-088f38f752fcd0985"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:619005575057:security-group/sg-06606f7cc98f625e7",
            "description": "Security group for backend instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06606f7cc98f625e7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from ALB only",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ffbf8ab80dd0d0dd"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "backend-sg",
            "name_prefix": "",
            "owner_id": "619005575057",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "backend-sec-group"
            },
            "tags_all": {
              "Name": "backend-sec-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-088f38f752fcd0985"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:619005575057:security-group/sg-036b81bff5eebcbd4",
            "description": "Security group for frontend EC2 instances; only ALB allowed in",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-036b81bff5eebcbd4",
            "ingress": [],
            "name": "frontend-sg",
            "name_prefix": "",
            "owner_id": "619005575057",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "frontend-sg"
            },
            "tags_all": {
              "Name": "frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-088f38f752fcd0985"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:619005575057:security-group/sg-050b30edc0fca845e",
            "description": "Allow MySQL access from backend EC2s",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050b30edc0fca845e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL access from backend",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06606f7cc98f625e7"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_sg",
            "name_prefix": "",
            "owner_id": "619005575057",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-sg"
            },
            "tags_all": {
              "Name": "rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-088f38f752fcd0985"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.backend_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_to_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow HTTP from ALB",
            "from_port": 80,
            "id": "sgrule-1556501722",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-2",
            "security_group_id": "sg-036b81bff5eebcbd4",
            "security_group_rule_id": "sgr-025a6ff1997f8447a",
            "self": false,
            "source_security_group_id": "sg-0ffbf8ab80dd0d0dd",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.frontend_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_to_frontend_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow HTTPS from ALB",
            "from_port": 443,
            "id": "sgrule-2665184538",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-2",
            "security_group_id": "sg-036b81bff5eebcbd4",
            "security_group_rule_id": "sgr-075018c7b1c1ca0fa",
            "self": false,
            "source_security_group_id": "sg-0ffbf8ab80dd0d0dd",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.frontend_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "internet_to_alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-913483061",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-2",
            "security_group_id": "sg-0ffbf8ab80dd0d0dd",
            "security_group_rule_id": "sgr-05fa59bee114b4506",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "internet_to_alb_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-2729361745",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-2",
            "security_group_id": "sg-0ffbf8ab80dd0d0dd",
            "security_group_rule_id": "sgr-0a8bc86b4d0ffd35e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Isolated_Subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:619005575057:subnet/subnet-05aba70a60b19b6df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.31.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05aba70a60b19b6df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "619005575057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "Isolated subnet 1 - Database",
              "Type": "Isolated"
            },
            "tags_all": {
              "Name": "Isolated subnet 1 - Database",
              "Type": "Isolated"
            },
            "vpc_id": "vpc-088f38f752fcd0985"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Isolated_Subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:619005575057:subnet/subnet-070769c8f0e0f2b3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.31.16.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070769c8f0e0f2b3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "619005575057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "Isolated subnet 2 - Database backup",
              "Type": "Isolated"
            },
            "tags_all": {
              "Name": "Isolated subnet 2 - Database backup",
              "Type": "Isolated"
            },
            "vpc_id": "vpc-088f38f752fcd0985"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_Subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:619005575057:subnet/subnet-0925789ab51212705",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.31.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0925789ab51212705",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "619005575057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "Private subnet 1 - Backend",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "Private subnet 1 - Backend",
              "Type": "Private"
            },
            "vpc_id": "vpc-088f38f752fcd0985"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_Subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:619005575057:subnet/subnet-097aadac374c007f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.31.14.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097aadac374c007f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "619005575057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "Private subnet 2 - Backend",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "Private subnet 2 - Backend",
              "Type": "Private"
            },
            "vpc_id": "vpc-088f38f752fcd0985"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_Subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:619005575057:subnet/subnet-0e4ab308bf0485c96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.31.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4ab308bf0485c96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "619005575057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "Public subnet 1 - Frontend",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "Public subnet 1 - Frontend",
              "Type": "Public"
            },
            "vpc_id": "vpc-088f38f752fcd0985"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_Subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:619005575057:subnet/subnet-08f74c240dc7be60c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.31.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f74c240dc7be60c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "619005575057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "Public subnet 2 - Frontend",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "Public subnet 2 - Frontend",
              "Type": "Public"
            },
            "vpc_id": "vpc-088f38f752fcd0985"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:619005575057:vpc/vpc-088f38f752fcd0985",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-00e01e7fd47da4ba4",
            "default_route_table_id": "rtb-0035f93053563f56e",
            "default_security_group_id": "sg-0bbc73a373a942896",
            "dhcp_options_id": "dopt-032f34b1a97669d34",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-088f38f752fcd0985",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0035f93053563f56e",
            "owner_id": "619005575057",
            "region": "eu-west-2",
            "tags": {
              "Name": "main_vpc_tf"
            },
            "tags_all": {
              "Name": "main_vpc_tf"
            }
          }
        }
      ]
    }
  ]
}